--- a/scheduler_files/configuration-template.json
+++ b/scheduler_files/configuration-template.json
@@ -22,5 +22,9 @@
 	{
 		"local": "/data/docker/workflows",
 		"wesContainer": "/workflows"
-	}
+	},
+	"imagePullSecrets":
+	[
+		{"name": "docker-secret"}
+	]
 }
