Add Schema code to Yii

--- a/Dockerfile.centos7
+++ b/Dockerfile.centos7
@@ -25,6 +25,6 @@ RUN composer create-project --prefer-dist --stability=dev yiisoft/yii2-app-basic
     composer require --prefer-dist yiisoft/yii2-httpclient && \
     composer require alexantr/yii2-elfinder
 
-#COPY . /data/www/schema
+COPY . /data/www/schema
 
 ENTRYPOINT ["php", "/data/www/schema/yii", "serve", "0.0.0.0:8080"]
