Add secrets for configuration, update the documentation accordingly

--- a/deployment/config-files/configuration.json
+++ b/deployment/config-files/configuration.json
@@ -1,23 +1,23 @@
 {
 	
-	"registry": "<registry host name>",
+	"registry": "{{ .Values.registry.url }}",
 	"registryAuth":
 	{
-		"username": "***",
-		"password": "***"
+		"username": "{{ .Values.registry.deployment.username }}",
+		"password": "{{ .Values.registry.deployment.password }}"
 	},
 	"database": 
 	{
 		"host":"postgres.schema.svc.cluster.local",
-		"username": "***",
-		"password": "***",
-		"database": "***"
+		"username": "{{ .Values.postgres.deployment.dbUsername }}",
+		"password": "{{ .Values.postgres.deployment.dbPassword }}",
+		"database": "{{ .Values.postgres.deployment.dbName }}"
 	},
 	"localftp":
 	{
 		"domain": "ftp.schema.svc.cluster.local",
-		"username": "***",
-		"password": "***"
+		"username": "{{ .Values.ftp.deployment.username }}",
+		"password": "{{ .Values.ftp.deployment.password }}"
 	},
 	"imagePullSecrets":
 	[
@@ -25,10 +25,10 @@
 	],
 	"ftp-creds":
 	{
-		"postgres.schema.svc.cluster.local":
+		"ftp.schema.svc.cluster.local":
 		{
-			"username": "****",
-			"password": "****"
+			"username": "{{ .Values.ftp.deployment.username }}",
+			"password": "{{ .Values.ftp.deployment.password }}"
 		}
 	},
 	"namespaces":
