--- a/deployment/templates/schema/schema-deployment.yaml
+++ b/deployment/templates/schema/schema-deployment.yaml
@@ -23,10 +23,30 @@ spec:
         volumeMounts:
           - mountPath: /data
             name: schema-volume
+          - name: schema-config
+            mountPath: /app/web/schema/config/db.php
+            subPath: db.php
+          - name: schema-config
+            mountPath: /app/web/schema/config/params.php
+            subPath: params.php
+          - name: schema-config
+            mountPath: /app/web/schema/scheduler_files/configuration.json
+            subPath: configuration.json
       volumes:
         - name: schema-volume
           persistentVolumeClaim:
             claimName: {{ .Values.schema.volume.name }}
+        - name: configuration
+          configMap:
+            defaultMode: 420
+            items:
+              - key: configuration.json
+                path: configuration.json
+              - key: db.php
+                path: db.php
+              - key: params.php
+                path: params.php
+            name: configuration
       restartPolicy: Always
       imagePullSecrets:
         - name: schema-regcreds
