--- a/deployment/templates/ftp/ftp-deployment.yaml
+++ b/deployment/templates/ftp/ftp-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.ftp.active true }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -50,3 +51,4 @@ spec:
       restartPolicy: Always
       imagePullSecrets:
         - name: schema-regcreds
+{{- end }}
