--- a/deployment/templates/registry/registry-creds.yaml
+++ b/deployment/templates/registry/registry-creds.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  .dockerconfigjson: {{ template "imagePullSecret" . }}
+  .dockerconfigjson: "{{ template "deployment.imagePullSecret" . }}"
 kind: Secret
 metadata:
   name: registry-creds
