--- a/deployment/templates/schema/schema-rbac.yaml
+++ b/deployment/templates/schema/schema-rbac.yaml
@@ -6,6 +6,7 @@ metadata:
 
 ---
 
+{{ if .Values.schema.deployment.cluster }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -31,9 +32,10 @@ rules:
       - top
       - get 
       - list
-
+{{ end }}
 ---
 
+{{ if .Values.schema.deployment.cluster }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -48,4 +50,4 @@ roleRef:
   kind: ClusterRole
   name: modify-pods-and-jobs
   apiGroup: rbac.authorization.k8s.io
-
+{{ end }}
