Add configurable ftp domain, by default it is the 'ftp' integrated service. Openshift does not allow  expose the ftp port

--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -95,6 +95,7 @@ ftp:
   active: true
   deployment:
       image: diwis/schema-ftp:1
+      domain: ftp
       username: tesk-1
       password: Z6fsH6MG
 
