Use FTP directly instead of copying files to shared (to FTP server and Schema) folder. This way a remote or a local FTP can be used indistintevely.

--- a/deployment/templates/schema/schema-secret.yaml
+++ b/deployment/templates/schema/schema-secret.yaml
@@ -40,6 +40,8 @@ stringData:
          * Change the following parameters according to your installation
          */
         'ftpIp' => '{{ .Values.ftp.deployment.domain }}',
+        'ftpUser' => '{{ .Values.ftp.deployment.username }}',
+        'ftpPass' => '{{ .Values.ftp.deployment.password }}',
         'teskEndpoint' => '{{ .Values.tesk.url }}',
         'wesEndpoint' => '{{ .Values.wes.url }}',
         'standalone' => {{ .Values.standalone.isStandalone }},
