--- a/deployment/config-files/configuration.json
+++ b/deployment/config-files/configuration.json
@@ -33,8 +33,8 @@
 	},
 	"namespaces":
 	{
-		"registry":"schema",
-		"jobs": "schema",
-		"tesk": "tesk"
+		"registry": "{{ .Values.namespaces.registry }}",
+		"jobs": "{{ .Values.namespaces.jobs }}",
+		"tesk": "{{ .Values.namespaces.tesk }}"
 	}
 }
