--- a/deployment/templates/schema/schema-rbac.yaml
+++ b/deployment/templates/schema/schema-rbac.yaml
@@ -50,4 +50,19 @@ roleRef:
   kind: ClusterRole
   name: modify-pods-and-jobs
   apiGroup: rbac.authorization.k8s.io
+{{ else }}
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: taskmaster-role-binding
+  namespace: {{ .Values.namespaces.jobs }}
+subjects:
+- kind: ServiceAccount
+  name: {{ .Values.schema.app_name }}-kubectl
+  namespace: {{ .Values.namespace }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: admin
 {{ end }}
