--- a/deployment/templates/schema/schema-secret.yaml
+++ b/deployment/templates/schema/schema-secret.yaml
@@ -1,6 +1,41 @@
 apiVersion: v1
 stringData:
-  configuration.json: "{\n\t\n\t\"registry\": \"{{ .Values.registry.url }}\",\n\t\"registryAuth\":\n\t{\n\t\t\"username\":\"{{ .Values.registry.deployment.username }}\",\n\t\t\"password\": \"{{ .Values.registry.deployment.password }}\"\n\t},\n\t\"database\": \n\t{\n\t\t\"host\":\"{{ .Values.postgres.app_name }}\",\n\t\t\"username\":\"{{ .Values.postgres.deployment.dbUsername }}\",\n\t\t\"password\": \"{{ .Values.postgres.deployment.dbPassword }}\",\n\t\t\"database\": \"{{ .Values.postgres.deployment.dbName }}\"\n\t},\n\t\"localftp\":\n\t{\n\t\t\"domain\": \"{{ .Values.ftp.deployment.domain }}\",\n\t\t\"username\": \"{{ .Values.ftp.deployment.username }}\",\n\t\t\"password\": \"{{ .Values.ftp.deployment.password }}\"\n\t},\n\t\"imagePullSecrets\":\n\t[\n\t\t{\"name\":\"registry-creds\"}\n\t],\n\t\"ftp-creds\":\n\t{\n\t\t\"ftp\":\n\t\t{\n\t\t\t\"username\":\"{{ .Values.ftp.deployment.username }}\",\n\t\t\t\"password\": \"{{ .Values.ftp.deployment.password }}\"\n\t\t}\n\t},\n\t\"namespaces\":\n\t{\n\t\t\"registry\":\"{{ .Values.namespaces.registry }}\",\n\t\t\"jobs\":\"{{ .Values.namespaces.jobs }}\",\n\t\t\"tesk\": \"{{ .Values.namespaces.tesk }}\"\n\t}\n}"
+  configuration.json: |
+    {
+      "registry": "{{ .Values.registry.url }}",
+      "registryAuth": {
+        "username": "{{ .Values.registry.deployment.username }}",
+        "password": "{{ .Values.registry.deployment.password }}"
+      },
+      "database": {
+        "host": "{{ .Values.postgres.app_name }}",
+        "username": "{{ .Values.postgres.deployment.dbUsername }}",
+        "password": "{{ .Values.postgres.deployment.dbPassword }}",
+        "database": "{{ .Values.postgres.deployment.dbName }}"
+      },
+      "localftp": {
+        "active" {{ .Values.ftp.active }},
+        "domain": "{{ .Values.ftp.deployment.domain }}",
+        "username": "{{ .Values.ftp.deployment.username }}",
+        "password": "{{ .Values.ftp.deployment.password }}"
+      },
+      "imagePullSecrets": [
+        {
+          "name": "registry-creds"
+        }
+      ],
+      "ftp-creds": {
+        "{{ .Values.ftp.deployment.domain }}": {
+          "username": "{{ .Values.ftp.deployment.username }}",
+          "password": "{{ .Values.ftp.deployment.password }}"
+        }
+      },
+      "namespaces": {
+        "registry": "{{ .Values.namespaces.registry }}",
+        "jobs": "{{ .Values.namespaces.jobs }}",
+        "tesk": "{{ .Values.namespaces.tesk }}"
+      }
+    }
   db.php: |
     <?php
 
@@ -39,6 +74,7 @@ stringData:
         /*
          * Change the following parameters according to your installation
          */
+        'ftpLocal' => {{ .Values.ftp.active }},
         'ftpIp' => '{{ .Values.ftp.deployment.domain }}',
         'ftpUser' => '{{ .Values.ftp.deployment.username }}',
         'ftpPass' => '{{ .Values.ftp.deployment.password }}',
