Missing : in json file

--- a/deployment/templates/schema/schema-secret.yaml
+++ b/deployment/templates/schema/schema-secret.yaml
@@ -14,7 +14,7 @@ stringData:
         "database": "{{ .Values.postgres.deployment.dbName }}"
       },
       "localftp": {
-        "active" {{ .Values.ftp.active }},
+        "active": {{ .Values.ftp.active }},
         "domain": "{{ .Values.ftp.deployment.domain }}",
         "username": "{{ .Values.ftp.deployment.username }}",
         "password": "{{ .Values.ftp.deployment.password }}"
