--- a/deployment/templates/schema/schema-rbac.yaml
+++ b/deployment/templates/schema/schema-rbac.yaml
@@ -65,4 +65,18 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: admin
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: kubectl-{{ .Values.namespace }}-role-binding
+  namespace: {{ .Values.namespaces.tesk }}
+subjects:
+- kind: ServiceAccount
+  name: {{ .Values.schema.app_name }}-kubectl
+  namespace: {{ .Values.namespace }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: admin
 {{ end }}
