--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -19,7 +19,7 @@ schema:
 
   deployment:
     replicaCount: 1
-    image: diwis/schema:20210409.1
+    image: diwis/schema:latest
     cluster_endpoint: https://your_k8s_api_endpoint:443
     cluster: true
 
