--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,9 +8,9 @@ name: Docker
 on:
   push:
     branches: [ main ]
-    # Publish semver tags as releases.
   pull_request:
     branches: [ main ]
+    types: [closed]
 
 env:
   IMAGE_NAME: diwis/schema
@@ -18,12 +18,11 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-
+    if: ${{ github.event.pull_request.merged == true || github.event_name == 'push' }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
