--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -47,4 +47,4 @@ jobs:
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          tags: diwis/schema:latest, diwis/schema:${{ steps.date.outputs.date }}
+          tags: ${{ secrets.DOCKER_REGISTRY }}/schema:latest, ${{ secrets.DOCKER_REGISTRY }}/schema:${{ steps.date.outputs.date }}
