Added config options

--- a/deployment/config-files/configuration.json
+++ b/deployment/config-files/configuration.json
@@ -38,5 +38,9 @@
         "jobs": "{{ .Values.namespaces.jobs }}",
         "tesk": "{{ .Values.namespaces.tesk }}",
         "jupyter" : "{{ .Values.namespaces.jupyter }}"
-    }
+    },
+    "jupyter":
+    {
+        "domain": "{{ .Values.jupyter.app_name }}.{{ .Values.domain }}"
+    } 
 }
