--- a/deployment/templates/schema/schema-secret.yaml
+++ b/deployment/templates/schema/schema-secret.yaml
@@ -33,7 +33,13 @@ stringData:
       "namespaces": {
         "registry": "{{ .Values.namespaces.registry }}",
         "jobs": "{{ .Values.namespaces.jobs }}",
-        "tesk": "{{ .Values.namespaces.tesk }}"
+        "tesk": "{{ .Values.namespaces.tesk }}",
+        "jupyter": "{{ .Values.namespaces.jupyter }}"
+
+      },
+      "jupyter":
+      {
+          "domain": "{{ .Values.jupyter.app_name }}.{{ .Values.domain }}"
       }
     }
   db.php: |
