Fixed bugs and added jupyter Route

--- a/deployment/templates/schema/schema-secret.yaml
+++ b/deployment/templates/schema/schema-secret.yaml
@@ -40,7 +40,14 @@ stringData:
       "jupyter":
       {
           "domain": "{{ .Values.jupyter.app_name }}.{{ .Values.domain }}"
-      }
+      },
+      {{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" }}
+      "platform": kubernetes 
+      {{- else if .Capabilities.APIVersions.Has "route.openshift.io/v1/Route" }} 
+      "platform": openshift 
+      {{- else }}
+      "platform": ""
+      {{- end }}
     }
   db.php: |
     <?php
@@ -98,7 +105,8 @@ stringData:
         'classifierMemLimit'=>8,
         'metrics_url' => '{{ .Values.metrics.url }}',
         'namespaces' => [
-            'jobs'=>'{{ .Values.namespaces.jobs }}'
+            'jobs'=>'{{ .Values.namespaces.jobs }}',
+            'jupyter' => '{{ .Values.namespaces.jupyter }}'
         ]
 
 
