--- a/deployment/templates/schema/schema-secret.yaml
+++ b/deployment/templates/schema/schema-secret.yaml
@@ -42,9 +42,9 @@ stringData:
           "domain": "{{ .Values.jupyter.app_name }}.{{ .Values.domain }}"
       },
       {{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" }}
-      "platform": kubernetes 
+      "platform": "kubernetes" 
       {{- else if .Capabilities.APIVersions.Has "route.openshift.io/v1/Route" }} 
-      "platform": openshift 
+      "platform": "openshift" 
       {{- else }}
       "platform": ""
       {{- end }}
