Since TESK supports limits, use TESK for task execution

--- a/deployment/config-files/configuration.json
+++ b/deployment/config-files/configuration.json
@@ -42,5 +42,6 @@
     "jupyter":
     {
         "domain": "{{ .Values.jupyter.app_name }}.{{ .Values.domain }}"
-    } 
+    },
+    "cleanTeskJobs": {{ .Values.schema.cleanTeskJobs }}
 }
