Added S3 capability and readiness for other workflow languages

--- a/deployment/templates/schema/schema-secret.yaml
+++ b/deployment/templates/schema/schema-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 stringData:
   configuration.json: |
     {
-      "registry": "{{ .Values.registry.url }}",
+      "registry": "{{ .Values.registry.app_name }}.{{ .Values.schema.app_name }}.{{ .Values.domain }}",
       "registryAuth": {
         "username": "{{ .Values.registry.deployment.username }}",
         "password": "{{ .Values.registry.deployment.password }}"
@@ -107,9 +107,38 @@ stringData:
         'namespaces' => [
             'jobs'=>'{{ .Values.namespaces.jobs }}',
             'jupyter' => '{{ .Values.namespaces.jupyter }}'
-        ]
-
-
+        ],
+        'workflows'=>
+        [
+          {{- if .Values.wes.CWL.enabled }}
+          'CWL'=>
+          [
+            'endpoint'=> '{{ .Values.wes.CWL.url }}',
+            'fileStore'=>'{{ .Values.wes.CWL.fileStore }}',
+          ],
+          {{- end }} 
+          {{- if .Values.wes.Nextflow.enabled }}
+          'Nextflow'=>
+          [
+            'endpoint'=> '{{ .Values.wes.Nextflow.url }}',
+            'fileStore'=>'{{ .Values.wes.Nextflow.fileStore }}',
+          ],
+          {{- end }} 
+          {{- if .Values.wes.SnakeMake.enabled }}
+          'SnakeMake'=>
+          [
+            'endpoint'=> '{{ .Values.wes.SnakeMake.url }}',
+            'fileStore'=>'{{ .Values.wes.SnakeMake.fileStore }}',
+          ],
+          {{- end }} 
+          {{- if .Values.wes.WDL.enabled }}
+          'WDL'=>
+          [
+            'endpoint'=> '{{ .Values.wes.WDL.url }}',
+            'fileStore'=>'{{ .Values.wes.WDL.fileStore }}',
+          ],
+          {{- end }} 
+        ],
 
     ];
 
