--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -6,6 +6,7 @@ namespaces:
   tesk: tesk
   registry: schema
   jupyter: schema
+  minio: schema
 domain: your.domain-name.com 
 
 # This is the app for the main schema interface
@@ -23,7 +24,7 @@ schema:
   deployment:
     replicaCount: 1
     image: diwis/schema:latest
-    cluster_endpoint: https://your_k8s_api_endpoint:443
+    cluster_endpoint: #https://your_k8s_api_endpoint:443
     cluster: true
 
   service:
@@ -43,8 +44,6 @@ nfsIp: <NFS server IP>
 # This is the docker registry deployed along with schema
 registry:
   app_name: registry
-  url: <registry host name>
-
   data_volume:
     deploy_volume: true
     storageClass: nfs-client
@@ -58,8 +57,8 @@ registry:
     name: registry-auth
 
   deployment:
-    username: <your_username>
-    password: <your_password>
+    username: test #<your_username>
+    password: test #<your_password>
     image: registry:2
     initImage: marcnuri/htpasswd
 
@@ -106,6 +105,19 @@ ftp:
       username: tesk-1
       password: Z6fsH6MG
 
+minio:
+  app_name: minio
+  active: true
+  deployment:
+      root_user: <your_username> # at least 3 characters long
+      root_password: <your_password> # at least 8 characters long
+      site_region: us-west-2
+  ingress:
+    enabled: true
+    https:
+      enabled: true
+      issuer: letsencrypt-prod
+
 jupyter:
   app_name: jupyter
 
@@ -113,7 +125,24 @@ tesk:
   url: <TESK installation URL>
 
 wes:
-  url: <WES installation URL>
+  CWL:
+    enabled: true
+    url: <CWL WES endpoint>
+    fileStore: s3 #s3 or ftp
+  Nextflow:
+    enabled: false
+    url: <Nextflow WES endpoint>
+    fileStore: s3 #s3 or ftp
+  SnakeMake:
+    enabled: false
+    url: <Snakemake WES endpoint>
+    fileStore: s3 #s3 or ftp
+  WDL:
+    enabled: false
+    url: <WDL WES endpoint>
+    fileStore: s3 #s3 or ftp
+
+
 
 standalone:
   isStandalone: true
