Missing parameter. Error bug fix.

--- a/deployment/templates/schema/schema-secret.yaml
+++ b/deployment/templates/schema/schema-secret.yaml
@@ -108,6 +108,7 @@ stringData:
             'jobs'=>'{{ .Values.namespaces.jobs }}',
             'jupyter' => '{{ .Values.namespaces.jupyter }}'
         ],
+        'jobFileStore'=>'s3',
         'workflows'=>
         [
           {{- if .Values.wes.CWL.enabled }}
