Fixed bug on jobFileStore in deployment

--- a/deployment/templates/schema/schema-secret.yaml
+++ b/deployment/templates/schema/schema-secret.yaml
@@ -108,7 +108,7 @@ stringData:
             'jobs'=>'{{ .Values.namespaces.jobs }}',
             'jupyter' => '{{ .Values.namespaces.jupyter }}'
         ],
-        'jobFileStore'=>'s3',
+        'jobFileStore'=>'{{ .Values.schema.jobFileStore }}',
         'workflows'=>
         [
           {{- if .Values.wes.CWL.enabled }}
