--- a/.github/workflows/docker-ahm-publish.yml
+++ b/.github/workflows/docker-ahm-publish.yml
@@ -43,4 +43,4 @@ jobs:
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ secrets.DOCKER_REGISTRY }}/schema:latest, ${{ secrets.DOCKER_REGISTRY }}/schema-ahm:${{ steps.date.outputs.date }}
+          tags: ${{ secrets.DOCKER_REGISTRY }}/schema-ahm:latest, ${{ secrets.DOCKER_REGISTRY }}/schema-ahm:${{ steps.date.outputs.date }}
