Fixed bug with database

--- a/deployment/templates/schema/schema-secret.yaml
+++ b/deployment/templates/schema/schema-secret.yaml
@@ -41,6 +41,8 @@ stringData:
       {
           "domain": "{{ .Values.jupyter.app_name }}.{{ .Values.domain }}"
       },
+      "cleanTeskJobs": {{ .Values.schema.cleanTeskJobs}},
+      "cleanTeskWFJobs":{{ .Values.schema.cleanTeskWFJobs}},
       {{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" }}
       "platform": "kubernetes" 
       {{- else if .Capabilities.APIVersions.Has "route.openshift.io/v1/Route" }} 
@@ -64,6 +66,23 @@ stringData:
         //'schemaCacheDuration' => 60,
         //'schemaCache' => 'cache',
     ];
+    ?>
+  db2.php: |
+    <?php
+
+    return [
+        'class' => 'yii\db\Connection',
+        'dsn' => 'pgsql:host={{ .Values.auth_db.dbHost }};dbname={{ .Values.auth_db.dbName }}',
+        'username' => '{{ .Values.auth_db.dbUsername }}',
+        'password' => '{{ .Values.auth_db.dbPassword }}',
+        'charset' => 'utf8',
+
+        // Schema cache options (for production environment)
+        //'enableSchemaCache' => true,
+        //'schemaCacheDuration' => 60,
+        //'schemaCache' => 'cache',
+    ];
+    ?>
   params.php: |
     <?php
 
@@ -94,6 +113,7 @@ stringData:
         'teskEndpoint' => '{{ .Values.tesk.url }}',
         'wesEndpoint' => '{{ .Values.wes.url }}',
         'standalone' => {{ .Values.standalone.isStandalone }},
+        'aai_auth'=>{{ .Values.auth_db.enabled }},
         'logo-footer' => 'img/elixir-dark.png',
         'name' => 'SCHeMa scheduler',
         'copyright' => 'Athena RC 2021',
@@ -144,6 +164,46 @@ stringData:
     ];
 
     ?>
+  user.php: |
+    <?php
+
+    use webvimark\modules\UserManagement\components\GhostHtml;
+    use webvimark\modules\UserManagement\UserManagementModule;
+    use yii\bootstrap\ActiveForm;
+    use yii\helpers\Html;
+    use yii\bootstrap4\BootstrapAsset;
+
+    BootstrapAsset::register($this);
+
+    $this->title="Login using the ELIXIR AAI Service";
+
+    $return='{{ .Values.auth_db.return_value }}';
+
+
+
+    $registerImage=Html::img('@web/img/ls-register.png',['width'=>'200px']);
+    $loginImage=Html::img('@web/img/ls-login.png',['width'=>'200px']);
+
+    $register="https://perun.elixir-czech.cz/registrar/?vo=elixir";
+    $login="https://{{ .Values.auth_db.auth_server }}/secure/index.php?return=$return";
+
+    ?>
+    <div class="container">
+      <div class="row"><div class="col-md-12 text-center"><h1><?=Html::encode($this->title)?></h1></div></div>
+      <div class="row">&nbsp;</div>
+      <div class="row">&nbsp;</div>
+      <div class="row">&nbsp;</div>
+      <div class="row"><div class="col-md-12 text-center"><?=Html::a($registerImage,$register)?>&nbsp;&nbsp;<?=Html::a($loginImage,$login)?></div></div>
+
+      <div class="row"><div class="col-md-12"><h2>How can I sign-in to the resource management system?</h2></div></div>
+        <ul class="square-list">
+          <li>To sign-in to the resource management system an LS-AAI account is required (just click on the “Register” button).</li>
+          <li>When you have your LS-AAI account ready, you can sign-in using your credentials (click the “Login” button).</li>
+          <li>During the previous steps you have to give your consent that LS-AAI and HYPATIA’s resource management system will have access to basic account information required for the flawless operation of the system.</li> 
+        </ul>
+        <div class="row"><div class="col-md-12">Learn <?=Html::a('more','https://elixir-europe.org/services/compute/aai', ['target'=>'_blank'])?> about the LS-AAI.</div></div>
+
+    </div>
 kind: Secret
 metadata:
   name: schema-config
