--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -1,13 +1,13 @@
 # Default values for schema.
 
-namespace: schema
+namespace: schema-gr
 namespaces:
-  jobs: schema
-  tesk: tesk
-  registry: schema
-  jupyter: schema
-  minio: schema
-domain: your.domain-name.com 
+  jobs: schema-gr
+  tesk: tesk-eu
+  registry: schema-gr
+  jupyter: schema-gr
+  minio: schema-gr
+domain: schema-gr.hypatia-comp.athenarc.gr
 
 # This is the app for the main schema interface
 schema:
@@ -20,10 +20,11 @@ schema:
     storageClass: nfs-client
 
   cleanTeskJobs: true #Set true or false if you want the system to clean TESK jobs after execution (only for clusters that run SCHeMa and TESK at the same time).
+  cleanTeskWFJobs: true
 
   deployment:
     replicaCount: 1
-    image: diwis/schema:latest
+    image: diwis/schema-ahm:latest
     cluster_endpoint: #https://your_k8s_api_endpoint:443
     cluster: true
 
@@ -89,7 +90,7 @@ postgres:
     replicaCount: 1
     image: postgres
     dbUsername: schema
-    dbPassword: <your_password>
+    dbPassword: schema-pass1Test
     dbName: schema
 
   service:
@@ -100,10 +101,10 @@ postgres:
 # FTP service deployed alongside schema for TESK file access
 ftp:
   app_name: ftp
-  active: true
+  active: false
   deployment:
       image: diwis/schema-ftp:1
-      domain: ftp
+      domain: hypatia-comp.athenarc.gr
       username: tesk-1
       password: Z6fsH6MG
 
@@ -111,8 +112,8 @@ minio:
   app_name: minio
   active: true
   deployment:
-      root_user: <your_username> # at least 3 characters long
-      root_password: <your_password> # at least 8 characters long
+      root_user: tesk-1 # at least 3 characters long
+      root_password: Z6fsH6MG # at least 8 characters long
       site_region: us-west-2
   ingress:
     enabled: true
@@ -124,13 +125,13 @@ jupyter:
   app_name: jupyter
 
 tesk:
-  url: <TESK installation URL>
+  url: tesk-eu.hypatia-compathenarc.gr
 
 wes:
   CWL:
     enabled: true
-    url: <CWL WES endpoint>
-    fileStore: s3 #s3 or ftp
+    url: wes.hypatia-comp.athenarc.gr
+    fileStore: ftp #s3 or ftp
   Nextflow:
     enabled: false
     url: <Nextflow WES endpoint>
@@ -144,7 +145,14 @@ wes:
     url: <WDL WES endpoint>
     fileStore: s3 #s3 or ftp
 
-
+auth_db:
+  enabled: true
+  return_value: schema-ahm-gr
+  auth_server: hypatia-auth.athenarc.gr
+  dbHost: "62.217.122.76"
+  dbUsername: auth_server
+  dbPassword: "5c#G8bOL3iM7c!Dse2QJ"
+  dbName: auth_server
 
 standalone:
   isStandalone: true
