--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -7,7 +7,7 @@ namespaces:
   registry: schema
   jupyter: schema
   minio: schema
-domain: your.domain-name.com 
+domain: your.domain.com
 
 # This is the app for the main schema interface
 schema:
@@ -20,10 +20,11 @@ schema:
     storageClass: nfs-client
 
   cleanTeskJobs: true #Set true or false if you want the system to clean TESK jobs after execution (only for clusters that run SCHeMa and TESK at the same time).
+  cleanTeskWFJobs: true
 
   deployment:
     replicaCount: 1
-    image: diwis/schema:latest
+    image: diwis/schema-ahm:latest
     cluster_endpoint: #https://your_k8s_api_endpoint:443
     cluster: true
 
@@ -89,7 +90,7 @@ postgres:
     replicaCount: 1
     image: postgres
     dbUsername: schema
-    dbPassword: <your_password>
+    dbPassword: schema-pass1Test
     dbName: schema
 
   service:
@@ -100,19 +101,19 @@ postgres:
 # FTP service deployed alongside schema for TESK file access
 ftp:
   app_name: ftp
-  active: true
+  active: false
   deployment:
       image: diwis/schema-ftp:1
-      domain: ftp
-      username: tesk-1
-      password: Z6fsH6MG
+      domain: your-domain.com
+      username: test
+      password: test
 
 minio:
   app_name: minio
   active: true
   deployment:
-      root_user: <your_username> # at least 3 characters long
-      root_password: <your_password> # at least 8 characters long
+      root_user: test # at least 3 characters long
+      root_password: test # at least 8 characters long
       site_region: us-west-2
   ingress:
     enabled: true
@@ -124,13 +125,13 @@ jupyter:
   app_name: jupyter
 
 tesk:
-  url: <TESK installation URL>
+  url: tesk-url.com
 
 wes:
   CWL:
     enabled: true
-    url: <CWL WES endpoint>
-    fileStore: s3 #s3 or ftp
+    url: wes-url.com
+    fileStore: ftp #s3 or ftp
   Nextflow:
     enabled: false
     url: <Nextflow WES endpoint>
@@ -144,7 +145,14 @@ wes:
     url: <WDL WES endpoint>
     fileStore: s3 #s3 or ftp
 
-
+auth_db:
+  enabled: false
+  return_value: something
+  auth_server: auth.com
+  dbHost: "auth.com"
+  dbUsername: something
+  dbPassword: something
+  dbName: something
 
 standalone:
   isStandalone: true
