added jail path to secret

--- a/deployment/templates/schema/schema-secret.yaml
+++ b/deployment/templates/schema/schema-secret.yaml
@@ -99,6 +99,7 @@ stringData:
         'ROCratesFolder' => '/data/docker/RO-crates/',
         'profilesFolderPath' => '/data/docker/profiles',
         'tmpImagePath' => '/data/docker/tmp-images/',
+        'ftpJailPath' =>'/data/docker/user-data/',
         'tmpWorkflowPath' => '/data/docker/workflows/',
         'scriptsFolder' => '/app/web/schema/scheduler_files/',
         'workflowsFolder' => '/data/docker/workflows',
