--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -36,6 +36,7 @@ jobs:
           CODE=`curl --write-out '%{http_code}' --output /dev/null --silent localhost:8080/index.php?r=site/health`;
           if [ $CODE!="200" ]
           then
-            exit 1
+            exit 1;
+          fi
       - name: End test
         run: docker-compose down
