--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -29,6 +29,6 @@ jobs:
         run: docker-compose up -d
       - name: Test api
         shell: bash
-        run: chmod a+x test-api.bash && bash test-api.bash
+        run: chmod a+x test-call.bash && bash test-api.bash
       - name: End test
         run: docker-compose down
