--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,21 +8,36 @@ name: Build
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
-    types: [closed]
-
-env:
-  IMAGE_NAME: diwis/schema
-
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-    if: ${{ github.event.pull_request.merged == true || github.event_name == 'push' }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Test build
+        run: docker-compose up -d
+      - name: Sleep
+        shell: bash
+        run: sleep 30;
+      - name: Test endpoint with output
+        shell: bash
+        run: curl --write-out '%{http_code}' --output /dev/null --silent localhost:8080/index.php?r=site/health
+      - name: Test endpoint
+        shell: bash
+        run: bash test-call.bash
+      - name: End test
+        run: docker-compose down
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
