Added configurable TESK volume size

--- a/deployment/templates/schema/schema-secret.yaml
+++ b/deployment/templates/schema/schema-secret.yaml
@@ -105,6 +105,7 @@ stringData:
             'maxRam' => {{ .Values.standalone.resources.maxRam }},
         ],
         'classifierMemLimit'=>8,
+        'teskTempVolumeSize' => '{{ .Values.tesk.url }}',
         'metrics_url' => '{{ .Values.metrics.url }}',
         'namespaces' => [
             'jobs'=>'{{ .Values.namespaces.jobs }}',
